# GenPatches

./: .gitignore  GenPatches.cabal  buildContinuous.sh  cbox.xml  configure.sh
GeneratePatches/: Main.hs
data/: cbox.xml
data/cbox/: cbox.xml
data/veach_bidir/: bidir.xml
lib/: MCMC.hs  RawStrings.hs  RenderUtil.hs  Score.hs  SpatialIndex.hs  System.hs  SystemUtil.hs
lib/DeepDescriptor/: FakeMain.hs  MCMC.hs  MSR.hs  MVR.hs  RawStrings.hs  Render.hs  Score.hs  SpatialIndex.hs  System.hs
lib/DeepDescriptor/MCMC/: Iterate.hs  Perturb.hs  Score.hs
lib/DeepDescriptor/Mitsuba/: Config.hs  Render.hs
lib/DeepDescriptor/SpatialIndex/: SpatialIndex.hs
