name:                GenPatches
version:             0.0.1.0
license:             MIT
author:              Eric Christiansen
-- homepage:            https://github.com/emchristiansen/LDBench
build-type:          Simple
cabal-version:       >=1.20

library
  hs-source-dirs:
    lib

  exposed-modules:
    DeepDescriptor.System
    DeepDescriptor.MSR
    DeepDescriptor.Mitsuba.Render
    DeepDescriptor.Mitsuba.Config
    DeepDescriptor.MCMC.Score
    DeepDescriptor.MCMC.Perturb
    DeepDescriptor.MCMC.Iterate
    -- DeepDescriptor.SpatialIndex.SpatialIndex

  default-language:
    Haskell2010

  build-depends:
      base >= 4
    , repa
    , raw-strings-qq
    , MissingH
    , parsec
    -- , process
    , JuicyPixels
    , lens
    , filepath
    , random
    , normaldistribution
    -- , xml
    , shelly
    , text
    -- , persistent
    -- , persistent-sqlite
    -- , persistent-template
    -- , transformers
    , pipes
    -- , binary
    , bytestring
    , zlib
    , containers
    , KdTree
    -- , QuickCheck
    , vector
    , formatting

  default-extensions:
    TemplateHaskell
    RankNTypes
    QuasiQuotes
    ScopedTypeVariables
    BangPatterns
    DeriveGeneric
    FlexibleInstances
    MultiParamTypeClasses
    FunctionalDependencies
    OverloadedStrings
    -- TypeFamilies
    -- DataKinds
    -- OverloadedStrings
    -- ExtendedDefaultRules

  ghc-options:
    -Wall
    -auto-all
    -caf-all
    -O2

-- executable GenPatches
  -- hs-source-dirs:
    -- bin

  -- main-is:
    -- Main.hs

  -- default-language:
    -- Haskell2010

  -- build-depends:
      -- base >= 4 && < 5
    -- , GenPatches
    -- , repa
    -- -- , repa-algorithms
    -- , raw-strings-qq
    -- , MissingH
    -- , parsec
    -- , process
    -- , JuicyPixels
    -- , lens
    -- , xml
    -- , persistent
    -- , persistent-sqlite
    -- , persistent-template
    -- , transformers
    -- , pipes
    -- , containers


  -- default-extensions:
    -- TemplateHaskell
    -- RankNTypes

  -- ghc-options:
    -- -Wall
    -- -auto-all
    -- -caf-all

-- executable MakeNN
  -- hs-source-dirs:
    -- bin

  -- main-is:
    -- NN.hs

  -- default-language:
    -- Haskell2010

  -- build-depends:
      -- base >= 4 && < 5
    -- , GenPatches
    -- , repa
    -- -- , repa-algorithms
    -- , raw-strings-qq
    -- , MissingH
    -- , parsec
    -- , process
    -- , JuicyPixels
    -- , lens
    -- , xml
    -- , persistent
    -- , persistent-sqlite
    -- , persistent-template
    -- , transformers
    -- , pipes
    -- , containers
    -- , KdTree
    -- , directory

  -- default-extensions:
    -- TemplateHaskell
    -- RankNTypes

  -- ghc-options:
    -- -Wall
    -- -auto-all
    -- -caf-all

--Test-suite correctness
  --type:
    --exitcode-stdio-1.0

  --hs-source-dirs:
    --test

  --main-is:
    --Correctness/Thriftier/Run.hs

  --default-language:
    --Haskell2010

  --default-extensions:
    ----FlexibleInstances
    ----FlexibleContexts
    ----FunctionalDependencies
    ----MultiParamTypeClasses
    ----TemplateHaskell
    ----TypeSynonymInstances
    ----QuasiQuotes
    ----OverloadedStrings

  --ghc-options:
    ---Wall
    ---auto-all
    ---caf-all
    -----O2

  --build-depends:
      --base >= 4 && < 5
    --, Thriftier
    --, lens
    --, tasty
    --, tasty-hunit
    --, tasty-quickcheck
    --, tasty-golden
    --, filepath
